--- a/Web_BanSach/Areas/Admin/Views/LoaiSach/ViewDelete.cshtml
+++ b/Web_BanSach/Areas/Admin/Views/LoaiSach/ViewDelete.cshtml
@@ -1,59 +1,52 @@
 ﻿@model Web_BanSach.LOAISACH
 
 @{
-    ViewBag.Title = "ViewDelete";
+    ViewBag.Title = "Xóa Loại Sách";
+    <link href="~/Areas/Css/XoaLoai.css" rel="stylesheet" />
 }
-    @using (Html.BeginForm("DeleteSubmit", "LoaiSach"))
+
+<section class="delete-container">
+    @using (Html.BeginForm("DeleteSubmit", "LoaiSach", new { area = "Admin" }, FormMethod.Post))
     {
         @Html.AntiForgeryToken()
-<div>
-<h5 style="color:red">Bạn có muốn xoá loại @Model.TENLOAI này không?</h5>
-    <hr />
-    <dl class="dl-horizontal mauchu">
-        <dd>
-            @Html.HiddenFor(model => model.MALOAI)
-            @*@Html.DisplayFor(model => model.MALOAI)*@
-        </dd>
+        @Html.HiddenFor(model => model.MALOAI)
 
-        <dt>
-            Tên Loại
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.TENLOAI)
-        </dd>
+        <div class="delete-card">
+            <!-- Header -->
+            <div class="delete-header">
+                <div class="delete-icon">
+                    <i class="fa-solid fa-trash-can"></i>
+                </div>
+            </div>
 
-    </dl>
-        <div class="form-actions mauchu">
-            <input type="submit" value="Delete" class="btn-save" />
-            @Html.ActionLink("Back to List", "Index", new { area = "Admin" })
+            <!-- Body -->
+            <div class="delete-body">
+                <div class="category-info">
+                    <div class="category-label">Loại sách sẽ bị xóa</div>
+
+                    <h3 class="category-name">
+                        <i class="fa-solid fa-tag"></i>
+                        @Model.TENLOAI
+                    </h3>
+
+                    <div class="id-badge">
+                        <i class="fa-solid fa-hashtag"></i>
+                        Mã loại: @Model.MALOAI
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer -->
+            <div class="delete-footer">
+                <a href="@Url.Action("Index", "LoaiSach", new { area = "Admin" })" class="btn-back">
+                    <i class="fa-solid fa-arrow-left"></i>
+                    Hủy bỏ
+                </a>
+                <button type="submit" class="btn-delete">
+                    <i class="fa-solid fa-trash-can"></i>
+                    Xóa 
+                </button>
+            </div>
         </div>
-</div>
     }
-<style>
-    .btn-save {
-        display: inline-block;
-        background-color: #4ade80; /* xanh lá nhạt */
-        color: #0f172a;
-        padding: 10px 18px;
-        border-radius: 6px;
-        text-decoration: none;
-        font-weight: bold;
-        transition: 0.25s;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        margin-right: 15px;
-    }
-
-        .btn-save:hover {
-            background-color: #16a34a; /* xanh lá đậu */
-            color: white;
-        }
-
-    .mauchu {
-        color: white;
-    }
-
-    .padding {
-        padding: 4px 4px 4px 4px;
-    }
-</style>
+</section>
