--- a/Web_BanSach/Areas/Admin/Views/NhaXuatBan/ThemNXB.cshtml
+++ b/Web_BanSach/Areas/Admin/Views/NhaXuatBan/ThemNXB.cshtml
@@ -2,77 +2,66 @@
 
 @{
     ViewBag.Title = "ThemNXB";
-}
+    <link href="~/Areas/Css/ThemLoai.css" rel="stylesheet" />
 <script src="https://esgoo.net/scripts/jquery.js"></script>
 
-@using (Html.BeginForm("ViewThemNXB", "NhaXuatBan", FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal mauchu padding">
-        <h4>Thêm nhà xuất bản</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group padding">
-            Tên nhà xuất bản
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TENNXB, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TENNXB, "", new { @class = "text-danger" })
+}
+<section class="form-container">
+    <div class="form-card">
+        <!-- Header -->
+        <div class="form-header">
+            <div class="form-icon">
+                <i class="fa-solid fa-folder-plus"></i>
             </div>
+            <h2>Thêm NXB Mới</h2>
         </div>
 
-        <div class="form-group padding">
-            Địa chỉ
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.DIACHI, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.DIACHI, "", new { @class = "text-danger" })*@
-                <select class="css_select form-control" id="tinh" name="DIACHI" title="Chọn Tỉnh Thành" style="width:180px">
-                    <option value="" class="form-control">Chọn Tỉnh Thành</option>
-                </select>
-            </div>
-        </div>
+        <!-- Body -->
+        <div class="form-body">
+            @using (Html.BeginForm("ViewThemNXB", "NhaXuatBan", new { area = "Admin" }, FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group padding">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn-save" />
-                @Html.ActionLink("Back", "Index")
-
-            </div>
+                <div class="custom-form-group">
+                    <label class="custom-label">
+                        <i class="fa-solid fa-tag"></i>
+                        Tên nhà xuất bản
+                        <span class="required-star">*</span>
+                    </label>
+                    @Html.TextBoxFor(model => model.TENNXB, new
+                    {
+                        @class = "custom-input",
+                        placeholder = "Nhập tên nhà xuất bản...",
+                        required = "required",
+                        maxlength = "100"
+                    })
+                </div>
+                <div class="custom-form-group">
+                    <label class="custom-label">
+                        <i class="fa-solid fa-tag"></i>
+                        Địa chỉ
+                        <span class="required-star">*</span>
+                    </label>
+                    <select class="css_select form-control" id="tinh" name="DIACHI" title="Chọn Tỉnh Thành" style="width:180px">
+                        <option value="" class="form-control">Chọn Tỉnh Thành</option>
+                    </select>
+                </div>
+                <!-- Buttons -->
+                <div class="form-footer">
+                    <a href="@Url.Action("Index", "NhaXuatBan", new { area = "Admin" })" class="btn-cancel">
+                        <i class="fa-solid fa-arrow-left"></i>
+                        Quay lại
+                    </a>
+                    <button type="submit" class="btn-submit">
+                        <i class="fa-solid fa-plus"></i>
+                        Thêm nhà xuất bản
+                    </button>
+                </div>
+            }
         </div>
     </div>
-}
-
-<style>
-
-    .btn-save {
-        display: inline-block;
-        background-color: #4ade80; /* xanh lá nhạt */
-        color: #0f172a;
-        padding: 10px 18px;
-        border-radius: 6px;
-        text-decoration: none;
-        font-weight: bold;
-        transition: 0.25s;
-        margin-bottom: 15px;
-        margin-top: 15px;
-        margin-right: 15px;
-    }
-
-        .btn-save:hover {
-            background-color: #16a34a; /* xanh lá đậu */
-            color: white;
-        }
-
-    .mauchu {
-        color: white;
-    }
-
-    .padding {
-        padding: 4px 4px 4px 4px;
-    }
-</style>
-
-
+</section>
 <script>
     $(document).ready(function () {
         //Lấy tỉnh thành
